MW-11 // overflow fix

--- a/assets/scss/components/_work-detail.scss
+++ b/assets/scss/components/_work-detail.scss
@@ -39,14 +39,15 @@
 	}
 	.video-container {
 		height: 100vh;
-		@media #{$mobile} {
-			height: 50vh;
-		}
 		background-color: color(Black);
 		background-size: cover;
 		background-position: center center;
 		background-repeat: no-repeat;
 		position: relative;
+		overflow: hidden;
+		@media #{$mobile} {
+			height: 50vh;
+		}
 		video {
 			position: absolute;
 			width: 100%;
